# sockpuppet

./: .gitignore  CHANGELOG.md  ERRORS.md  LICENSE  MEMORY.md  OVERVIEW.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConnectionTable.css  ConnectionTable.jsx  KillModal.css  KillModal.jsx  StatusBar.css  StatusBar.jsx  Toolbar.css  Toolbar.jsx
